<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/new_menu_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/exitConfirmation"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorTransparent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/new_button"
            android:clickable="true"
            android:padding="3dp"
            android:text="@string/exitYes"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorMainText"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/new_button"
            android:clickable="true"
            android:padding="3dp"
            android:text="@string/exitNo"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorMainText"/>
    </LinearLayout>

</LinearLayout>