<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- Header aligned to top -->

    
    <include layout="@layout/section_half_top_layout"/>

    <RelativeLayout
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.00" >
		

        <EditText
            android:id="@+id/registerPageFormEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            android:background="@color/colorBackground"
            android:textColor="@color/colorNoir"
            android:textColorHint="@color/colorNoirTransparent"
            android:ems="14"
            android:hint="@string/loginEmail"
            android:padding="4dp"
            android:textSize="26sp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registerPageFormUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerPageFormEmail"
            android:layout_alignLeft="@+id/registerPageFormEmail"
            android:layout_alignRight="@+id/registerPageFormEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackground"
            android:textColor="@color/colorNoir"
            android:textColorHint="@color/colorNoirTransparent"
            android:ems="14"
		    android:textSize="26sp"
            android:hint="@string/loginUser"
            android:padding="4dp"
            android:inputType="textUri">
        </EditText>

        <EditText
            android:id="@+id/registerPageFormPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerPageFormUser"
            android:layout_alignLeft="@+id/registerPageFormEmail"
            android:layout_alignRight="@+id/registerPageFormEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackground"
            android:textColor="@color/colorNoir"
            android:textColorHint="@color/colorNoirTransparent"
            android:ems="14"
		    android:textSize="26sp"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:padding="4dp" >
        </EditText>

        <Button
            android:id="@+id/registerPageButtonRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@+id/registerPageFormPassword"
            android:layout_alignRight="@+id/registerPageFormPassword"
            android:layout_below="@+id/registerPageFormPassword"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/registerGo"
            android:background="@drawable/button_authentification_pages"
            android:textColor="@color/colorMainText"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:text=""
            android:textSize="18dp"
            android:id="@+id/errorMsg"
            android:layout_below="@+id/registerPageButtonRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp" />

        <!--
        <Button
            android:id="@+id/registerPageButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registerPageFormPassword"
            android:layout_below="@+id/registerPageFormPassword"
            android:background="@drawable/button_authentification_pages"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/registerCancel"
            android:textColor="@color/colorMainText"
            android:textSize="26sp" /> -->

    </RelativeLayout>

</LinearLayout>
</merge>