<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment2_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical" >

    
    <!-- Header aligned to top -->

    <LinearLayout
        android:id="@+id/fragmentPagesHeader"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/colorFrame"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/fragment2Title"
            android:textColor="@color/colorMainText"
            android:textSize="20sp" />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/searchChallengeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_search"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/boutonSettingDesc"
            android:textColor="@color/colorTransparent" />

        <ImageButton
            android:id="@+id/mainPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_setting"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/boutonSettingDesc"
            android:textColor="@color/colorTransparent"
            android:onClick="menu"   />



        </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragment2PageTabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragmentPagesHeader"
        android:background="@color/colorNoir" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/fragment2Tab1"
            android:id="@+id/f2_button1"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/tabs_selector"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/fragment2Tab2"
            android:id="@+id/f2_button2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/f2_button1"
            android:layout_toEndOf="@+id/f2_button1"
            android:layout_marginRight="1dp"
            android:background="@drawable/tabs_selector"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/fragment2Tab3"
            android:id="@+id/f2_button3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/f2_button2"
            android:layout_toEndOf="@+id/f2_button2"
            android:layout_marginRight="1dp"
            android:background="@drawable/tabs_selector"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment2PageContent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragment2PageTabs"
        android:background="@color/colorBackground" >

        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/listView"
                android:divider="@color/colorNoir"
                android:dividerHeight="1dp"
                android:scrollbars="none"
                android:cacheColorHint="#00000000"
                android:listSelector="@drawable/list_row_selector"
                android:choiceMode="singleChoice"/>

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="0dp"
        android:background="@color/colorNoir"
        android:id="@+id/challengeExtention"
        android:layout_below="@+id/fragmentPagesHeader">

        <EditText
            android:id="@+id/challengeName"
            android:inputType="textWebEditText"
            android:imeOptions="actionSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="Search/Create a challenge"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"/>


        <ImageButton
            android:id="@+id/searchChallengeNameButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@android:drawable/stat_notify_more"
            android:layout_marginTop="0dp"
            android:background="@color/colorTransparent"/>

    </LinearLayout>

</RelativeLayout>
